--- a/ctDataGenerator/Beleg/Arbeitsaufteilung.tex
+++ b/ctDataGenerator/Beleg/Arbeitsaufteilung.tex
@@ -34,5 +34,5 @@ Was tun bei langsamen Ausführungsplänen?&       			  & ~\ref{WasTunBeiLangsamenA
 Zusammenfassung&         																& ~\ref{Zusammenfassung} \\ 
 Ausblick&        																					 & ~\ref{Ausblick} \\ 
 \hline \hline
-\end{tabular} \end{flushleft} \caption{Aufteilung von Kapitel 2} \end{table}
+\end{tabular} \end{flushleft} \caption{Aufteilung} \end{table}
 
