--- a/ctDataGenerator/Beleg/Ingo/LangsameAusfuehrungsplaene.tex
+++ b/ctDataGenerator/Beleg/Ingo/LangsameAusfuehrungsplaene.tex
@@ -14,7 +14,8 @@ Mit autovacuum = on in der postgresql.conf kann autovacuum aktiviert werden.
 \item Indexe verwenden \\
 Es kann z.B. der Entwickler geeignete Indexe anlegen, sodass das DBMS diese verwenden kann, um performantere Ausführungspläne zu erzeugen.
 
-\item Mehrspaltige Indexe verwenden, wenn dadurch ein performanterer Ausführungs\-plan erzeugt werden kann.
+\item Mehrspaltige Indexe verwenden, wenn dadurch ein performanterer 
+Aus\-führ\-ungs\-plan erzeugt werden kann.
 
 \item Keine zu intensiven Rechnungen in SQL formulieren.
 
