--- a/Beleg/paper.tex
+++ b/Beleg/paper.tex
@@ -64,6 +64,7 @@
 \keywords{Parallel evolutionary algorithms, island model, spatial structures, offspring populations, runtime analysis}
 
 \input{Ingo/Introduction}
+\input{Ingo/previouswork}
 
 \input{Ingo/Design}
 \input{Ingo/database}
