--- a/Beleg/paper.tex
+++ b/Beleg/paper.tex
@@ -74,6 +74,10 @@
 \input{Ingo/backend}
 
 \input{Ingo/database}
+\input{Ingo/Miscellaneous}
+
+\input{Ingo/Conclusion}
+
 
 \section{Preliminaries}
 \label{sec:Preliminaries}
