--- a/Beleg/Ingo/conclusion.tex
+++ b/Beleg/Ingo/conclusion.tex
@@ -1,2 +1,7 @@
 \section{Conclusion and future work}\label{Conclusion}
-For this project a lot of time was needed only to create a prototype of ComeTogether. It was time consuming to find the proper way to implement the communication between the android client and the backend. And there was a lack of knowledge to handle the errors while creating this project on google app engine. In a future work new features like a picture upload or a radius search could be implemented and the backend could be moved to a  Platform as a Service provider.
+For this project a lot of time was needed only to create a prototype of ComeTogether. It was time consuming to find the proper way to implement the communication between the android client and the backend. And there was a lack of knowledge to handle the errors while creating this project on google app engine. 
+
+It was no time to read conference publication or journal publications. Solutions were mostly found on normal blogs.
+
+
+In a future work new features like a picture upload or a radius search could be implemented and the backend could be moved to a  Platform as a Service provider.
