--- a/Beleg/paper.tex
+++ b/Beleg/paper.tex
@@ -84,7 +84,7 @@
 
 \input{Ingo/programmingenvironment}
 \input{Ingo/backend}
-
+\input{Christof/frontend}
 \input{Ingo/database}
 \input{Ingo/Miscellaneous}
 
