--- a/Beleg/literature-short.bib
+++ b/Beleg/literature-short.bib
@@ -14,10 +14,10 @@
 }
 
 @book{Entwurfsmuster,
-  title={{Entwurfsmuster von Kopf bis Fuß}},
+  title={{Entwurfsmuster von Kopf bis Fuss}},
   author={Freeman, Eric},
   year={2007},
-  publisher={O’REILLY}
+  publisher={O'REILLY}
 }
 
 @comment{jabref-meta: selector_publisher:}
