--- a/Beleg/Arbeitsaufteilung.tex
+++ b/Beleg/Arbeitsaufteilung.tex
@@ -7,14 +7,16 @@
 \textbf{Work Packages}		&	\textbf{C. Ochmann}	& \textbf{I. Körner}  \\ \hline \hline
 abstract   	      &                     & x       \\
 introduction&                                      & x  \\ 
-requirements engineering& & x  \\ 
+requirements engineering& x & x  \\ 
 previous work& & x  \\ 
 design&                                      & x  \\ 
 miscellaneous& & x  \\ 
 programming environment& & x  \\ 
 backend  &                             		      & x \\
+frontend &  x & \\
+maven-android-projekt &  x & \\
 database&                              & x \\ 
-conclusion&                                  & x  \\
+conclusion&                           x       & x  \\
 \hline \hline
 \end{tabular} \end{flushleft} \caption{Work Packages} \end{table}
 
