--- a/Beleg/Ingo/conclusion.tex
+++ b/Beleg/Ingo/conclusion.tex
@@ -5,3 +5,8 @@ It was no time to read conference publication or journal publications. Solutions
 
 
 In a future work new features like a picture upload or a radius search could be implemented and the backend could be moved to a  Platform as a Service provider.
+\newline
+Da wir bisher im Bachelor-Studium nur ganz wenig mit Android zu tun hatten, mussten wir uns in die \\App-Programmierung
+einarbeiten und an kleinen Beispielprojekten die verschiedenen Android-Mechanismen wie z.B. den AsyncTask, ActionBar und
+die SQLite-Datenbank kennenlernen bevor wir richtig anfangen konnten die ComeTogether-App zu entwickeln. Es gab auch 
+in der Frontend-Entwicklung immer wieder Probleme, die lösbar waren aber viel Zeit gekostet haben und wir nicht richtig vorangekommen sind. Wir haben jetzt die wichtigsten Grundbausteine für die Entwicklung der ComeTogether-App geschaffen, dazu gehört u.a. die Kommunikation mit dem RESTful-Webservice, der Zugriff auf die SQLite-Datenbank als auch die \\Einsatzmöglichkeiten von AsyncTasks. Der nächste Schritt wäre, diese Grundbausteine zu nutzen und Schritt für Schritt die restlichen Activities und Views zu erzeugen, die uns bisher fehlen. 
