--- a/Beleg/literature-short.bib
+++ b/Beleg/literature-short.bib
@@ -20,6 +20,20 @@
   publisher={O’REILLY}
 }
 
+ @book{Android1,
+  title={{Einfuehrung in die Android-Entwicklung}},
+  author={Gargenta, Marko},
+  year={2011},
+  publisher={O'Reilly}
+}
+
+@book{Android2,
+  title={{Android 2, Grundlagen und Programmierung}},
+  author={Becker, Arno},
+  year={2010},
+  publisher={Dpunkt Verlag}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
